crates/mssql-client/tests/compile-fail/from_row_on_enum.rs
use mssql_derive::FromRow;

/// FromRow can only be derived for structs, not enums.
#[derive(FromRow)]
enum NotAStruct {
    A,
    B,
}

fn main() {}
