crates/mssql-client/tests/compile-fail/from_row_on_enum.stderr
error: FromRow can only be derived for structs
 --> tests/compile-fail/from_row_on_enum.rs:3:1
  |
3 | / /// FromRow can only be derived for structs, not enums.
4 | | #[derive(FromRow)]
5 | | enum NotAStruct {
6 | |     A,
7 | |     B,
8 | | }
  | |_^
